fix(ai): 餐饮 null-intent 全出口统一委派 + 成本工具参数校验后移 (R11d)
轮2/轮3 复验残漏: ①null-intent 有多个 LLM 出口(early-detection 分析流/
2b 闲聊/RAG), 仅拦 executeAnalysisFlow 不够 — 提炼
tryRestaurantTieredDelegate 统一覆盖三出口(early 门后/2b 前/分析流头);
②DISH_COST_QUERY 必填 productName 在参数校验层先反问, doExecute 委派门
没机会跑 — 校验后移到门后, 无菜名且未委派时同语义反问。

Python 端点三轮探针已证 delegate:true + 米饭限域, 故障纯在 Java 路由层。

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_011LrhA47MdeEeCn7GZRc4VT